# agentpack

./: .gitignore  Cargo.toml  README.md  RELEASING.md  SOCIALIZATION.md  deny.toml  install.sh
.github/workflows/: ci.yml
Formula/: agentpack.rb
catalog/: README.md
docs/: _config.yml  commands.md  index.md  manifest.md
examples/mcp-dependency-demo/: README.md  agentpack.json  package-lock.json  package.json  test-client.js
examples/mcp-dependency-demo/.cursor/: mcp.json
examples/mcp-dependency-demo/.kiro/: mcp.json
examples/mcp-dependency-demo/servers/geocoding/: index.js  package-lock.json  package.json
examples/mcp-dependency-demo/servers/travel-advisor/: index.js  package-lock.json  package.json
examples/mcp-dependency-demo/servers/weather/: index.js  package-lock.json  package.json
examples/str-analyzer/: README.md  agentpack.json
examples/str-analyzer/agents/: pricing.py  research.py
gateway/: index.js  package-lock.json  package.json
src/: main.rs  manifest.rs  registry.rs  resolver.rs  tests.rs
src/commands/: add.rs  audit.rs  doctor.rs  export.rs  fetch.rs  graph.rs  import.rs  init.rs  install.rs  mod.rs  run.rs  search.rs  update.rs  validate.rs
