[package]
name = "agentpack"
version = "0.1.0"
edition = "2021"
description = "Dependency manager for MCP servers and AI agents"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
semver = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
